@@ -7,54 +7,31 @@ import java.util.LinkedList;
  */
 public class PileOfCards {
     private LinkedList<Card> drawPile = new LinkedList<>();
-    private LinkedList<Card> discardPile = new LinkedList<>();
+
+
+    PileOfCards(LinkedList<Card> cardPile){
+        this.drawPile = cardPile;
+    }
 
     public LinkedList<Card> returnDrawPile(){
         return drawPile;
     }
-    public LinkedList<Card> returnDiscardPile(){
-        return discardPile;
-    }
 
 
-    public Card drawCard(LinkedList<Card> drawPile){
+    public Card drawCard(){
 
-        return drawPile.get(0);
-
-    }
-
-    public Card drawDiscardPile(LinkedList<Card> discardPile){
-
-        return discardPile.get(0);
+        Card newCard = drawPile.getFirst();
+        drawPile.removeFirst();
+        return newCard;
 
     }
+
 
     public void displayDrawPile(){
-        System.out.println("displayDrawPile : ");
-        for(int i=0;i< drawPile.size();i++){
+        System.out.print("displayDrawPile : ");
+        for(int i=0;i < drawPile.size();i++){
             System.out.print(drawPile.get(i).getCardNumber()+" ");
         }
     }
-
-    public void displayDiscardPile(){
-        System.out.println("displayDrawPile : ");
-        for(int i=0;i< discardPile.size();i++){
-            System.out.print(discardPile.get(i).getCardNumber()+" ");
-        }
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 }
